# RustCalculator

./: .gitignore  Cargo.toml  install_linux.sh  install_windows.ps1  main.rs  readme.md
calc/: Cargo.toml  install_linux.sh  readme.md
calc/src/: lib.rs  main.rs  parser.rs  scanner.rs
calc/tests/: parser.rs  scanner.rs
src/: lib.rs  main.rs  parser.rs  scanner.rs
tests/: parser.rs  scanner.rs
